<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.lxien</groupId>
        <artifactId>orbien-main</artifactId>
        <version>0.24.0</version>
    </parent>
    <artifactId>orbien-client-app</artifactId>
    <packaging>jar</packaging>
    <name>orbien-client-app</name>
    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <orbien.version>0.24.0</orbien.version>
        <native-maven-plugin.version>0.11.4</native-maven-plugin.version>
        <maven-shade-plugin.version>3.6.2</maven-shade-plugin.version>
        <shade.skip>false</shade.skip>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.github.lxien</groupId>
            <artifactId>orbien-cli</artifactId>
            <version>${orbien.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>native</id>
            <properties>
                <shade.skip>true</shade.skip>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <mainClass>io.github.lxien.orbien.client.OrbienClientStartup</mainClass>
                            <imageName>orbien</imageName>
                            <buildArgs>
                                <buildArg>-Os</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                                <buildArg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</buildArg>
                                <buildArg>--add-opens=java.base/java.nio=ALL-UNNAMED</buildArg>
                                <buildArg>--initialize-at-run-time=org.slf4j</buildArg>
                                <buildArg>--initialize-at-run-time=ch.qos.logback</buildArg>
                                <buildArg>--initialize-at-run-time=ch.qos.logback.core.pattern</buildArg>
                                <buildArg>--initialize-at-run-time=ch.qos.logback.core.rolling</buildArg>
                                <buildArg>--initialize-at-run-time=org.xerial.snappy</buildArg>
                                <buildArg>--initialize-at-run-time=net.jpountz</buildArg>
                                <buildArg>--initialize-at-run-time=com.github.luben.zstd</buildArg>
                                <buildArg>--initialize-at-run-time=io.github.lxien.orbien.core.transport.compress.Lz4Compressor</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <arg>-Dio.netty.handler.ssl.noOpenSsl=true</arg>
                                <arg>-Dio.netty.handler.ssl.noBouncyCastle=true</arg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>shade</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>${maven-shade-plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                                <configuration>
                                    <skip>${shade.skip}</skip>
                                    <transformers>
                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                            <mainClass>io.github.lxien.orbien.client.OrbienClientStartup</mainClass>
                                            <manifestEntries>
                                                <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
                                            </manifestEntries>
                                        </transformer>
                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                    </transformers>
                                    <filters>
                                        <filter>
                                            <artifact>*:*</artifact>
                                            <excludes>
                                                <exclude>META-INF/*.SF</exclude>
                                                <exclude>META-INF/*.DSA</exclude>
                                                <exclude>META-INF/*.RSA</exclude>
                                            </excludes>
                                        </filter>
                                    </filters>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <finalName>orbien</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
